@@ -1,4 +1,4 @@
-[![Windows-CI](https://github.com/nerudaj/dgm-lib/actions/workflows/main.yml/badge.svg)](https://github.com/nerudaj/dgm-lib/actions/workflows/main.yml) [![Android-CI](https://github.com/nerudaj/dgm-lib/actions/workflows/android.yml/badge.svg?branch=main)](https://github.com/nerudaj/dgm-lib/actions/workflows/android.yml) [![IntegrationTests](https://github.com/nerudaj/dgm-lib/actions/workflows/integration.yml/badge.svg)](https://github.com/nerudaj/dgm-lib/actions/workflows/integration.yml) 
+[![Windows-MSVC-CI](https://github.com/nerudaj/dgm-lib/actions/workflows/main.yml/badge.svg)](https://github.com/nerudaj/dgm-lib/actions/workflows/main.yml) [![Windows-Clang-Ninja-CI](https://github.com/nerudaj/dgm-lib/actions/workflows/main-clang.yml/badge.svg)](https://github.com/nerudaj/dgm-lib/actions/workflows/main-clang.yml) [![Android-CI](https://github.com/nerudaj/dgm-lib/actions/workflows/android.yml/badge.svg?branch=main)](https://github.com/nerudaj/dgm-lib/actions/workflows/android.yml) [![IntegrationTests](https://github.com/nerudaj/dgm-lib/actions/workflows/integration.yml/badge.svg)](https://github.com/nerudaj/dgm-lib/actions/workflows/integration.yml) 
 
 # Readme
 
